# BookMyParking-backend

./: Dockerfile  Makefile  docker-compose.yml  pyproject.toml  start.sh
bookmyparking/: manage.py
bookmyparking/bookmyparking/: asgi.py  settings.py  urls.py  wsgi.py
bookmyparking/parkings/: admin.py  models.py  serializers.py  views.py
bookmyparking/parkings/migrations/: 0001_initial.py
bookmyparking/places/: admin.py  models.py  serializers.py  views.py
bookmyparking/places/migrations/: 0001_initial.py
